--- a/dessert.html
+++ b/dessert.html
@@ -48,7 +48,7 @@
       </div>
     </div>
     <button class="button" onclick="location.href='activities.html'">
-      Continue UwU
+      retarded shi click me
     </button>
   </body>
 </html>
